sys/prebuilt-bindings/geos_3.13.rs

extern "C" {
    pub fn GEOSBufferWithParams_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        p: *const GEOSBufferParams,
        width: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSBufferWithStyle_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        width: libc::c_double,
        quadsegs: libc::c_int,
        endCapStyle: libc::c_int,
        joinStyle: libc::c_int,
        mitreLimit: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSDensify_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        tolerance: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSOffsetCurve_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        width: libc::c_double,
        quadsegs: libc::c_int,
        joinStyle: libc::c_int,
        mitreLimit: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createPoint_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createPointFromXY_r(
        handle: GEOSContextHandle_t,
        x: libc::c_double,
        y: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createEmptyPoint_r(handle: GEOSContextHandle_t) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createLinearRing_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createLineString_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createEmptyLineString_r(handle: GEOSContextHandle_t) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createEmptyPolygon_r(handle: GEOSContextHandle_t) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createPolygon_r(
        handle: GEOSContextHandle_t,
        shell: *mut GEOSGeometry,
        holes: *mut *mut GEOSGeometry,
        nholes: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createCollection_r(
        handle: GEOSContextHandle_t,
        type_: libc::c_int,
        geoms: *mut *mut GEOSGeometry,
        ngeoms: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_releaseCollection_r(
        handle: GEOSContextHandle_t,
        collection: *mut GEOSGeometry,
        ngeoms: *mut libc::c_uint,
    ) -> *mut *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createEmptyCollection_r(
        handle: GEOSContextHandle_t,
        type_: libc::c_int,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createRectangle_r(
        handle: GEOSContextHandle_t,
        xmin: libc::c_double,
        ymin: libc::c_double,
        xmax: libc::c_double,
        ymax: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_clone_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createCircularString_r(
        handle: GEOSContextHandle_t,
        s: *mut GEOSCoordSequence,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createEmptyCircularString_r(handle: GEOSContextHandle_t) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createCompoundCurve_r(
        handle: GEOSContextHandle_t,
        curves: *mut *mut GEOSGeometry,
        ncurves: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createEmptyCompoundCurve_r(handle: GEOSContextHandle_t) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createCurvePolygon_r(
        handle: GEOSContextHandle_t,
        shell: *mut GEOSGeometry,
        holes: *mut *mut GEOSGeometry,
        nholes: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_createEmptyCurvePolygon_r(handle: GEOSContextHandle_t) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGeom_destroy_r(handle: GEOSContextHandle_t, g: *mut GEOSGeometry);
}
extern "C" {
    pub fn GEOSCoverageUnion_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSCoverageIsValid_r(
        extHandle: GEOSContextHandle_t,
        input: *const GEOSGeometry,
        gapWidth: libc::c_double,
        output: *mut *mut GEOSGeometry,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSCoverageSimplifyVW_r(
        extHandle: GEOSContextHandle_t,
        input: *const GEOSGeometry,
        tolerance: libc::c_double,
        preserveBoundary: libc::c_int,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSEnvelope_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry)
        -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSIntersection_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSIntersectionPrec_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        gridSize: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSConvexHull_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSConcaveHull_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        ratio: libc::c_double,
        allowHoles: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSConcaveHullByLength_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        ratio: libc::c_double,
        allowHoles: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSPolygonHullSimplify_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        isOuter: libc::c_uint,
        vertexNumFraction: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSPolygonHullSimplifyMode_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        isOuter: libc::c_uint,
        parameterMode: libc::c_uint,
        parameter: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSConcaveHullOfPolygons_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        lengthRatio: libc::c_double,
        isTight: libc::c_uint,
        isHolesAllowed: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSMinimumRotatedRectangle_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSMaximumInscribedCircle_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        tolerance: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSLargestEmptyCircle_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        boundary: *const GEOSGeometry,
        tolerance: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSMinimumWidth_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSMinimumClearanceLine_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSMinimumClearance_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        distance: *mut libc::c_double,
    ) -> libc::c_int;
}
extern "C" {
    pub fn GEOSDifference_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSDifferencePrec_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        gridSize: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSSymDifference_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSSymDifferencePrec_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        gridSize: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSBoundary_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry)
        -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSUnion_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSUnionPrec_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        gridSize: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSUnaryUnion_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSUnaryUnionPrec_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        gridSize: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSDisjointSubsetUnion_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSPointOnSurface_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSGetCentroid_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSMinimumBoundingCircle_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        radius: *mut libc::c_double,
        center: *mut *mut GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSNode_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSClipByRect_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        xmin: libc::c_double,
        ymin: libc::c_double,
        xmax: libc::c_double,
        ymax: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSPolygonize_r(
        handle: GEOSContextHandle_t,
        geoms: *const *const GEOSGeometry,
        ngeoms: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSPolygonize_valid_r(
        handle: GEOSContextHandle_t,
        geoms: *const *const GEOSGeometry,
        ngems: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSPolygonizer_getCutEdges_r(
        handle: GEOSContextHandle_t,
        geoms: *const *const GEOSGeometry,
        ngeoms: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSPolygonize_full_r(
        handle: GEOSContextHandle_t,
        input: *const GEOSGeometry,
        cuts: *mut *mut GEOSGeometry,
        dangles: *mut *mut GEOSGeometry,
        invalidRings: *mut *mut GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSBuildArea_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSLineMerge_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSLineMergeDirected_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSLineSubstring_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        start_fraction: libc::c_double,
        end_fdraction: libc::c_double,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSReverse_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    pub fn GEOSSimplify_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        tolerance: libc::c_double,
    ) -> *mut GEOSGeometry;
}
